[gd_scene load_steps=6 format=3 uid="uid://cw3477t4v07bx"]

[ext_resource type="Script" uid="uid://dwe6w5mu4qqxn" path="res://scripts/entities/characters/NPCs/customer.gd" id="1_6vy2j"]
[ext_resource type="PackedScene" uid="uid://b1keub3h102q6" path="res://scenes/interaction/interaction_area.tscn" id="3_ersvl"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tfayv"]
size = Vector2(129, 130)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a0uba"]
size = Vector2(128.5, 261)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6vy2j"]
size = Vector2(129, 50.5)

[node name="Customer" type="CharacterBody2D"]
script = ExtResource("1_6vy2j")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(65, 64)

[node name="CustomerCollision" type="CollisionShape2D" parent="."]
position = Vector2(64.5, 64)
shape = SubResource("RectangleShape2D_tfayv")
disabled = true

[node name="Interactable" parent="." instance=ExtResource("3_ersvl")]
interact_name = "[E] Talk to Customer"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interactable"]
position = Vector2(65, -130.5)
shape = SubResource("RectangleShape2D_a0uba")
debug_color = Color(0.739933, 0.379952, 0.702722, 0.42)

[node name="Blocked" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Blocked"]
position = Vector2(65, -25.75)
shape = SubResource("RectangleShape2D_6vy2j")
debug_color = Color(0.797617, 0.422829, 1.92523e-07, 0.42)

[node name="WaitTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="WaitTimeProgressBar" type="ProgressBar" parent="."]
offset_top = 143.0
offset_right = 127.0
offset_bottom = 163.0
value = 100.0
show_percentage = false

[connection signal="area_entered" from="Blocked" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Blocked" to="." method="_on_area_2d_area_exited"]
[connection signal="body_entered" from="Blocked" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Blocked" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="WaitTimer" to="." method="_on_wait_timer_timeout"]
